# parsers

./: README.md  pyproject.toml
src/parsers/: __init__.py  cli.py  registry.py  schema.py
src/parsers/sources/: bear.py  calendar.py  chatgpt.py  claude.py  drive.py  films.py  git.py  gmail.py  healthkit.py  hinge.py  imessage.py  instagram.py  logseq.py  mbox.py  notes.py  papers.py  pinterest.py  raycast.py  signal.py  twitter.py  whatsapp.py  yfull.py  youtube.py
